Thu Oct  4 15:46:02 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c: tiny typo fixes.

Thu Oct  4 15:29:56 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c: merged AUTHORS into the gnome_about dialog. Marked
	many things as translatable. Hopefully this is the first step to
	get rid of those widgets in the Help menu.
	* autogen.sh: call automake with -add-missing, for automake 1.5.

Thu Oct  4 15:23:18 CEST 2001  Robin Ercisson  <lobbin@localhost.nu>

	* src/.cvsignore, src/Makefile.am: changed gnomemud to gnome-mud.

	* src/gnome-mud.h, src/net.c (make_connection): Now takes a third
	argument which is the profile being used, and Default if not found.
	
	* src/init.c, src/wizard.c: Pass profilename "Default" to
	make_connection()

	* src/profiles.c: Pass profilename to make_connection().

>>>>>>> 1.65
Thu Oct  4 13:56:33 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/data.c [own_data]: Removed some unused variables.
	(load_data()/save_data()): Removed, no longer needed.
	(window_data): Takes PROFILE_DATA * as argument instead of GtkWidget,
	also all references to own_data.menu was removed.

	* src/init.c: Removed alias/triggers/variables from menu.

	* src/gnome-mud.h (window_data): Changed.

	* src/profiles.c (profilelist_alias_cb): Callback for editing profiles
	through old data_* function.
	(profilelist_triggers_cb): ditto
	(profilelist_variables_cb): ditto
	(profilelist_(un)select_row_cb): Remade a little.
	(profilelist_dialog): Removed some functionality.
	(window_profile_edit): Added some signals.

Wed Oct  3 13:18:50 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/data.c (save_data, load_data, data_button_delete):    
	Removed sensitivity of button_save, which is not in use
	anymore.

	* src/profiles.c (profilelist_new_input_cb): Use live ProfileList,
	do not use temporary.
	(profilelist_new_cb): append clist with gnome_dialog call.
	(profilelist_delete_cb): Check and delete from right ProfileList
	and CList.